<resources>
    <string name="internship">Android Internship</string>
    <string name="app_name">W1-D1</string>
    <string name="app1_name">Android ChatView Simple</string>
    <string name="Name_username">Name_username</string>
    <string name="two_minutes">Two minutes ago</string>
    <string name="title">Title</string>
    <string name="comment">Comment</string>
    <string name="tvTextTitle">Lorem ipsum dolor sit\namet, consectetur\nadipiscing elit. Nam\nsed ornare purus.\nVestibulum vestibulu</string>
    <string name="tvTextCmt">Consectetur adipiscing elit.!\nVestibulum vestibulum\ndlgnissim metus!...</string>
    <string name="Hide">HIDE</string>
    <string name="comment2">COMMENT</string>
    <string name="share">Share</string>
    <string name="Typename">Type your message</string>
    <string name="Msg">Message received</string>
    <string name="Sent">Sent</string>
    <string name="lefthour">06:50 pm.</string>
    <string name="righthour">06:51 p.m.</string>
    <string name="friendsmutual">Number Of Friends Mutual</string>
    <string name="friends">Friends</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="emailsubs">Email Subscriptions</string>
    <string name="allowemail">Allow email from other</string>
    <string name="event_and_listener">Event and Listener</string>
    <string name="view_viewgroup">View and View Group</string>
    <string name="resources">Resources</string>
    <string name="view_pager">View Pager</string>
    <string name="favorite">Favorite</string>
    <string name="unfavorite">Unfavorite</string>
    <string name="recycle_view">Recycle View</string>
    <string name="fragment">Fragment</string>
    <string name="showtext">Show Text</string>
    <string name="entername">Enter Name</string>
    <string name="malefemale">Male or Female</string>
    <string name="login">Login</string>
    <string name="unit_test">Unit Test</string>
    <string name="length_user_name">Username length must be greater than 7 and less than 24 characters</string>
    <string name="two_uppercase_letter">Username must be at least 2 characters in uppercase</string>
    <string name="special_character_space">Username does not contain special characters and space</string>
    <string name="two_digit">Username must have at most 2 numbers</string>
    <string name="password_different_username">Password must be different than Username</string>
    <string name="special_character_number">Password must contain at least one special character or number</string>
    <string name="length_password">Minimum password length is 8 characters</string>
    <string name="dont_repeat_character_twice">Password can not repeat any character more than 2 times</string>
    <string name="space_password">Password must not contain spaces</string>
    <string name="three_uppercase_letter">Password must be at least 3 characters in uppercase</string>
    <string name="login_success">Login Successfully !!!</string>
    <string name="enter_singer_name">Enter Singer Name</string>
    <string name="search_singer">Search Singer</string>
    <string name="track">Track</string>
    <string name="api">API</string>
    <string name="signup_activity">SignUpActivity</string>
    <string name="sharepreferences">Share Preferences</string>
    <string name="savestatus">Save Status</string>
    <string name="savetext">Save Text</string>
    <string name="database">Database Table</string>
    <string name="namedatabase">Enter your name</string>
    <string name="agedatabase">Enter your age</string>
    <string name="insertdatabase">Insert</string>
    <string name="deletedabase">Delete</string>
    <string name="number1">1</string>
    <string name="nguyenquanghuy">Huy Nguyen Q.</string>
    <string name="age">21</string>
</resources>
