<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/acDatabase"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnSaveStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/savestatus" />

    <Button
        android:id="@+id/btnSaveText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/savetext" />

    <Button
        android:id="@+id/btnDatabase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/database" />

</LinearLayout>
