<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edtSex"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/entername"
        android:inputType="text" />

    <EditText
        android:id="@+id/edtSex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnShowText"
        android:hint="@string/malefemale"
        android:inputType="text" />

    <Button
        android:id="@+id/btnShowText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:text="@string/showtext" />
</RelativeLayout>
