<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvId"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/img_database"
        android:gravity="center"
        android:text="@string/number1"
        android:textAlignment="center"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvNameDatabase"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/tvId"
        android:text="@string/nguyenquanghuy"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tvAgeDatabase"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/tvNameDatabase"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/tvId"
        android:text="@string/age"
        android:textSize="25sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/tvId"
        android:layout_marginTop="10dp"
        android:background="@color/colorBlack" />

</RelativeLayout>
