<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="vn.asiantech.internship.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imgView"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:background="#000080"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/imgCircle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imgView"
                android:layout_alignEnd="@+id/imgView"
                android:layout_alignRight="@+id/imgView"
                android:layout_marginBottom="-25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/custom_circle"/>

            <ImageView
                android:id="@+id/imgCircle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imgView"
                android:layout_alignLeft="@+id/imgView"
                android:layout_alignStart="@+id/imgView"
                android:layout_marginBottom="-60dp"
                android:layout_marginLeft="25dp"
                android:layout_marginStart="25dp"
                android:background="@drawable/custom_circle" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/imgCircle2"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/imgCircle2"
                android:layout_toRightOf="@+id/imgCircle2"
                android:text="@string/Name_username"
                android:textColor="#080808"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvMinute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tvName"
                android:layout_alignStart="@+id/tvName"
                android:layout_below="@+id/tvName"
                android:text="@string/two_minutes"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:text="@string/title"
                android:textColor="#080808"
                android:textStyle="bold"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvCmt"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/tvTitle"
                android:layout_toRightOf="@+id/tvTitle"
                android:gravity="end"
                android:text="@string/comment"
                android:textAlignment="textEnd"
                android:textColor="#8c8282"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tvViewTitle"
                android:layout_width="165dp"
                android:layout_height="90dp"
                android:layout_below="@+id/tvTitle"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:text="@string/tvTextTitle"
                android:textColor="#767676"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvViewCmt"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_below="@+id/tvCmt"
                android:layout_marginTop="30dp"
                android:layout_toEndOf="@+id/tvViewTitle"
                android:layout_toRightOf="@+id/tvViewTitle"
                android:gravity="end"
                android:text="@string/tvTextCmt"
                android:textAlignment="textEnd"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/tvViewTitle"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnHide"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/Hide"
                    android:textSize="15sp"
                    style="@style/AppTheme" />

                <Button
                    android:id="@+id/btnComment"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/custom_selector"
                    android:text="@string/comment2"
                    android:textColor="@color/color_SelectorComment"
                    android:textSize="15sp"
                    style="@style/AppTheme"/>

                <Button
                    android:id="@+id/btnShare"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/share"
                    android:textSize="15sp"
                    style="@style/AppTheme" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
