<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imgAvatar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerVertical="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorBlack"/>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/btnFriend"
        android:layout_toRightOf="@id/imgAvatar"
        android:text="@string/Name_username"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvNumOfFriend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvName"
        android:layout_toRightOf="@id/imgAvatar"
        android:text="@string/friendsmutual"
        android:textSize="13sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnFriend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:textColor="@color/colorPrimary"
        android:text="@string/friends"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/custom_button_friend" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/imgAvatar"
        android:layout_marginTop="10dp"
        android:background="@color/colorSelected" />

</RelativeLayout>
