<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="vn.asiantech.internship.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            tools:ignore="DuplicateIds,ExtraText">

            <ImageView
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:background="#000080"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/circle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/view2"
                android:layout_alignEnd="@+id/view2"
                android:layout_alignRight="@+id/view2"
                android:layout_marginBottom="-25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/circle"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/circle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/view2"
                android:layout_alignLeft="@+id/view2"
                android:layout_alignStart="@+id/view2"
                android:layout_marginBottom="-60dp"
                android:layout_marginLeft="25dp"
                android:layout_marginStart="25dp"
                android:background="@drawable/circle"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/circle1"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/circle1"
                android:layout_toRightOf="@+id/circle1"
                android:text="@string/Name_username"
                android:textColor="#080808"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/minutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/name"
                android:layout_alignStart="@+id/name"
                android:layout_below="@+id/name"
                android:text="@string/two_minutes"
                android:textSize="10sp"
                tools:ignore="SmallSp" />
            />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:ignore="DuplicateIds">

            <TextView
                android:id="@+id/title"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/view3"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:text="@string/title"
                android:textColor="#080808"
                android:textSize="20sp"
                tools:ignore="NotSibling" />

            <TextView
                android:id="@+id/comment"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/title"
                android:layout_toRightOf="@+id/title"
                android:gravity="end"
                android:text="@string/comment"
                android:textAlignment="textEnd"
                android:textColor="#8c8282"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/nd1"
                android:layout_width="140dp"
                android:layout_height="90dp"
                android:layout_below="@+id/title"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/nd1"
                android:textColor="#767676"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/nd2"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_below="@+id/comment"
                android:layout_marginTop="30dp"
                android:layout_toEndOf="@+id/nd1"
                android:layout_toRightOf="@+id/nd1"
                android:gravity="end"
                android:text="@string/nd2"
                android:textAlignment="textEnd"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/nd1"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/Hide"
                    android:textSize="15sp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btn_comment"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/custom_selector"
                    android:text="@string/comment2"
                    android:textColor="@color/selector_comment"
                    android:textSize="15sp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/share"
                    android:textSize="15sp"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
